--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -217,7 +217,7 @@
       async function publish(event) {
         event.preventDefault(); // Prevent the form from refreshing the page
         try {
-          const response = await fetch("/publish", {
+          const response = await fetch("https://blog-5edj.onrender.com/publish", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
