--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -132,7 +132,7 @@
         padding: 2rem;
       "
     >
-      <form id="blogForm" action="/publish" method="POST">
+      <form id="blogForm" action="https://blog-5edj.onrender.com/publish" method="POST">
         <h2>Create a Blog Post</h2>
 
         <label for="title">Post Title</label>
@@ -217,7 +217,7 @@
       async function publish(event) {
         event.preventDefault(); // Prevent the form from refreshing the page
         try {
-          const response = await fetch("/publish", {
+          const response = await fetch("https://blog-5edj.onrender.com/publish", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
