--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -132,7 +132,7 @@
         padding: 2rem;
       "
     >
-      <form id="blogForm" action="https://blog-5edj.onrender.com/publish" method="POST">
+      <form id="blogForm">
         <h2>Create a Blog Post</h2>
 
         <label for="title">Post Title</label>
