--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -216,6 +216,7 @@
 
       async function publish(event) {
         event.preventDefault(); // Prevent the form from refreshing the page
+        console.log("It is working.");
         try {
           const response = await fetch("https://blog-5edj.onrender.com/publish", {
             method: "POST",
