--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -218,15 +218,18 @@
         event.preventDefault(); // Prevent the form from refreshing the page
         console.log("It is working.");
         try {
-          const response = await fetch("https://blog-5edj.onrender.com/publish", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              title: titleInput.value,
-              subtitle: subtitleInput.value,
-              text: textArea.value,
-            }),
-          });
+          const response = await fetch(
+            "https://blog-5edj.onrender.com/publish",
+            {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({
+                title: titleInput.value,
+                subtitle: subtitleInput.value,
+                text: textArea.value,
+              }),
+            }
+          );
           const data = await response.json();
           console.log("Published data:", data);
         } catch (error) {
@@ -234,8 +237,13 @@
         }
       }
 
-      document.getElementById("blogForm").addEventListener("submit", publish);
+      document
+        .getElementById("blogForm")
+        .addEventListener("submit", function (event) {
+          console.log("Form submitted!"); 
+          event.preventDefault();
+          publish(event);
+        });
     </script>
   </body>
 </html>
-
