--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -216,8 +216,8 @@
 
       async function publish(event) {
         event.preventDefault(); // Prevent the form from refreshing the page
-        console.log("It is working.");
         try {
+          console.log("It is working.");
           const response = await fetch(
             "https://blog-5edj.onrender.com/publish",
             {
@@ -237,13 +237,7 @@
         }
       }
 
-      document
-        .getElementById("blogForm")
-        .addEventListener("submit", function (event) {
-          console.log("Form submitted!"); 
-          event.preventDefault();
-          publish(event);
-        });
+      document.getElementById("blogForm").addEventListener("submit", publish);
     </script>
   </body>
 </html>
