--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -130,7 +130,7 @@
   </head>
   <body>
     <div class="blog-container" id="blogPost">
-      <button onclick='(window.location.pathname = "/")' id="go-home">
+      <button onclick="window.location.href='https://blog-frontend-9cvq.onrender.com/'" id="go-home">
         <span class="fa-solid fa-home"></span> Go to Home
       </button>
       <h1>{{title}}</h1>
