--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -148,7 +148,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
   <script>
     document.getElementById("go-home").addEventListener("click", () => {
-      window.location.href = "https://blog-frontend-9cvq.onrender.com/";  // Correct URL
+      window.location.href = "{{frontendURL}}"; // This will be replaced with the correct URL
     });
   </script>
 </body>
