--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -137,8 +137,7 @@
 
 <body>
   <div class="blog-container" id="blogPost">
-    <button id="go-home">Go Home</button>
-    <span class="fa-solid fa-home"></span> Go to Home
+    <button id="go-home"><span class="fa-solid fa-home"></span> Go Home</button>
     </button>
     <h1>{{title}}</h1>
     <h2>{{subtitle}}</h2>
@@ -152,5 +151,4 @@
     });
   </script>
 </body>
-
 </html>
