--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -137,7 +137,9 @@
 
 <body>
   <div class="blog-container" id="blogPost">
-    <button id="go-home"><span class="fa-solid fa-home"></span> Go Home</button>
+    <button id="go-home">
+      <span class="fa-solid fa-home"></span> 
+      Go Home
     </button>
     <h1>{{title}}</h1>
     <h2>{{subtitle}}</h2>
