--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -149,7 +149,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
   <script>
     document.getElementById("go-home").addEventListener("click", () => {
-      window.location.href = "{{frontendURL}}"; // This will be replaced with the correct URL
+      window.location.href = "{{frontendURL}}";
     });
   </script>
 </body>
