--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -138,8 +138,8 @@
 <body>
   <div class="blog-container" id="blogPost">
     <button id="go-home">
-      <span class="fa-solid fa-home"></span> 
-      Go Home
+      <!-- <span class="fa-solid fa-home"></span> 
+      Go Home -->
     </button>
     <h1>{{title}}</h1>
     <h2>{{subtitle}}</h2>
