--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -134,9 +134,9 @@
     }
   </style>
 </head>
-
 <body>
   <div class="blog-container" id="blogPost">
+    <!-- Go home btn -->
     <button id="go-home">
       <span class="fa-solid fa-home"></span> 
       Go Home
