--- a/frontend/public/input.html
+++ b/frontend/public/input.html
@@ -13,7 +13,7 @@
       body {
         font-family: "Helvetica Neue", Arial, sans-serif;
         display: flex;
-        justify-content: start;
+        justify-content: center;
         align-items: center;
         min-height: 100vh;
         background: linear-gradient(135deg, #dde2ff, #fcddff);
