--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -40,7 +40,7 @@
       /* border-radius: 20px; */
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
       color: #333;
-      text-align: center;
+      text-align: left;
       display: flex;
       flex-direction: column;
       gap: 10px;
