--- a/frontend/public/blog.html
+++ b/frontend/public/blog.html
@@ -45,6 +45,7 @@
       flex-direction: column;
       gap: 10px;
       overflow: hidden;
+      line-height: 2;
     }
 
     .blog-container h1 {
@@ -53,6 +54,7 @@
       color: #4a47a3;
       background-color: #fcddff;
       padding: 10px;
+      text-align: center;
     }
 
     .blog-container h2 {
@@ -60,6 +62,7 @@
       margin-bottom: 1rem;
       color: #4a47a3;
       text-decoration: underline;
+      text-align: center;
     }
 
     .blog-container p {
